# new-claude

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cc-switch/: .gitignore  README.md  index.html  package.json  vite.config.js
cc-switch/src/: main.jsx
cc-switch/src-tauri/: Cargo.toml  tauri.conf.json
cc-switch/src-tauri/capabilities/: default.json
cc-switch/src-tauri/icons/: icon.icns
cc-switch/src-tauri/src/: main.rs
src/: App.jsx  App.tsx  api.js  api.ts  glass.css  main.jsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_cli.rs  health.rs  main.rs  marketplace.rs  sync.rs
src/components/: CaCertButton.tsx  ConfigPanel.jsx  ConfigPanel.tsx  DiagnosticsPanel.tsx  ExtensionsPanel.tsx  GuidePanel.jsx  GuidePanel.tsx  HealthButton.tsx  InstanceSettingsCard.tsx  MarketplacePanel.tsx  SettingsPanel.tsx  UsagePanel.jsx  UsagePanel.tsx
